--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Inschrijvingen | Sint-Jan Berchmanscollege</title>
-		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
 		<link rel="stylesheet" href="style_berkay.css" />
+        <link rel="stylesheet" href="/NelleFavoreel/menu.css">
 	</head>
 	<body>
 		<!--Nav-->
@@ -57,13 +57,10 @@
 						</form>
 					</div>
 				</div>
-				<!--hamburger menu-->
-				
-				<!--hamburger menu-->
 			</div>
 		</div>
 		<!--Nav-->
-		<!--Hamburger-->
+        <!--Hamburger-->
 		<div class="navErik">
 			<div class="image">
 				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
@@ -122,6 +119,7 @@
 			</nav>
 		</div>
 		<!--Hamburger-->
+		
 <!--firstmain-->
 <div class="first-main">
     <h1 class="title">Inschrijvingen</h1>
