--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -200,32 +200,31 @@
         </div>
     </section>
 </div>
-<!--Footer-->
+<!--footer-->
 <footer>
     <div class="foot">
         <div class="frame">
             <h1>Sint-Jan Berchmanscollege</h1>
             <div class="icons">
                 <div class="icon">
-                    <img src="/images/call.png" alt="call">
+                    <img src="/images/call.png" alt="call" />
                 </div>
                 <p>02/5120370</p>
             </div>
             <div class="icons">
                 <div class="icon">
-                    <img src="/images/location.png" alt="call">
+                    <img src="/images/location.png" alt="call" />
                 </div>
                 <p>Ursulinenstraat 4 1000 Bruxelles</p>
             </div>
             <div class="icons">
                 <div class="icon">
-                    <img src="/images/mail.png" alt="call">
+                    <img src="/images/mail.png" alt="call" />
                 </div>
                 <p>secretariaat@sint-jan-brussel.be</p>
             </div>
         </div>
-        <div class="white">
-        </div>
+        <div class="white"></div>
     </div>
     <div class="blue">
         <div class="txtB">
@@ -237,7 +236,7 @@
             </div>
             <div class="txtBlue">
                 <h1>Onze school</h1>
-                <a href="/BerkayUnutkan/inschrijvingen.html"><p>Inschrijvingen</p></a>
+                <a href="/BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
                 <a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
             </div>
         </div>
