--- a/BerkayUnutkan/vacaturesberkay.html
+++ b/BerkayUnutkan/vacaturesberkay.html
@@ -15,7 +15,7 @@
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
@@ -36,13 +36,13 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="#">Leefregels</a></li>
-                                   <li><a href="#">Vacatures</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
                            <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
@@ -183,7 +183,7 @@
 					</div>
 					<div class="txtBlue">
 						<h1>Onze school</h1>
-						<a href="/BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
+						<a href="/BerkayUnutkan/inschrijvingen.html"><p>Inschrijvingen</p></a>
 						<a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
 					</div>
 				</div>
