--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -25,7 +25,7 @@
 						<ul>
 							<li><a href="/GloryMenga/home.html">Home</a></li>
 							<li>
-								<a href="/GloryMenga/home.html">Over ons</a>
+								<a href="#">Over ons</a>
 								<ul class="dropdown">
 									<li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
