--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -25,7 +25,7 @@
                     <div class="menu">
                        <ul>
                            <li><a href="/GloryMenga/home.html">Home</a></li>
-                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                           <li><a href="#">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -37,13 +37,13 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
+                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="#">Leefregels</a></li>
-                                   <li><a href="#">Vacatures</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
                            <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
@@ -59,9 +59,6 @@
 						</form>
 					</div>
 				</div>
-				<!--hamburger menu-->
-				
-				<!--hamburger menu-->
 			</div>
 		</div>
 		<!--Nav-->
