--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -11,20 +11,19 @@
 </head>
 <body>
     <!--Nav-->
-    <div class="top">
-        <div class="nav">
-                <div class="image">
-                    <a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"></a>
-                    <div class="txtI">
-                        <p>Sint-Jan Berchmanscollege</p>
-                    </div>
-                </div>
-                
-                <div class="right"> 
+		<div class="top">
+			<div class="nav">
+				<div class="image">
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<div class="txtI">
+						<p>Sint-Jan Berchmanscollege</p>
+					</div>
+				</div>
+				<div class="right"> 
                     <div class="menu">
                        <ul>
                            <li><a href="/GloryMenga/home.html">Home</a></li>
-                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                           <li><a href="#">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -36,13 +35,13 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
+                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="#">Leefregels</a></li>
-                                   <li><a href="#">Vacatures</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
                            <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
@@ -51,16 +50,16 @@
                            </div>
                        </ul>
                    </div>
-                    <div class="box">
-                        <form>
-                            <input type="text" name="" placeholder="Typ hier...">
-                            <input type="submit" name="" value="Zoeken">
-                        </form>
-                    </div>
-                </div>
-        </div>
-    </div>
-    <!--Nav-->
+					<div class="box">
+						<form>
+							<input type="text" id="searchInput" placeholder="Typ hier..."/>
+							<button type="submit" onclick="search()">Zoeken</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--Nav-->
     <!--Hamburger-->
 		<div class="navErik">
 			<div class="image">
