--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -23,7 +23,7 @@
                     <div class="menu">
                        <ul>
                            <li><a href="/GloryMenga/home.html">Home</a></li>
-                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                           <li><a href="">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -37,7 +37,7 @@
                                <ul class="dropdown">
                                    <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
                                    <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
                                    <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
                                    <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
