--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -20,8 +20,7 @@
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
 				</div>
-
-				<div class="rechts">
+				<div class="right">
 					<div class="menu">
 						<ul>
 							<li><a href="/GloryMenga/home.html">Home</a></li>
@@ -57,16 +56,22 @@
 									</li>
 									<li>
 										<a
-											href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html"
+											href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html"
 											>Studierichtingen</a
 										>
 									</li>
-									<li><a href="#">Privacybeleid</a></li>
+									<li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
 									<li>
 										<a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a>
 									</li>
-									<li><a href="#">Leefregels</a></li>
-									<li><a href="#">Vacatures</a></li>
+									<li>
+										<a href="/schoolreglement2022-2023_def.pdf"
+											>Schoolreglement</a
+										>
+									</li>
+									<li>
+										<a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a>
+									</li>
 								</ul>
 							</li>
 							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
