--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -38,11 +38,11 @@
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
                                    <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank">Schoolkosten</a></li>
                                    <li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
-                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
+                                   <li><a href="/Privacyverklaring.pdf" target="_blank">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf" target="_blank">Schoolreglement</a></li>
                                    <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
