--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -25,7 +25,7 @@
 						<ul>
 							<li><a href="/GloryMenga/home.html">Home</a></li>
 							<li>
-								<a href="/GloryMenga/home.html">Over ons</a>
+								<a href="#">Over ons</a>
 								<ul class="dropdown">
 									<li>
 										<a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a>
@@ -56,7 +56,7 @@
 									</li>
 									<li>
 										<a
-											href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html"
+											href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html"
 											>Studierichtingen</a
 										>
 									</li>
