--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -7,7 +7,7 @@
 		<title>Contact</title>
 		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="style_Nelle.css" />
+		<link rel="stylesheet" href="/NelleFavoreel/style_Nelle.css" />
 	</head>
 	<body>
 		<!--Nav-->
