--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style_Home_Glory.css" />
+		<link rel="stylesheet" href="/GloryMenga/style_Home_Glory.css" />
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png">
 		<link rel="stylesheet" href="/NelleFavoreel/menu.css">
 		<title>Sint-Jan Berchmanscollege Brussel</title>
@@ -24,7 +24,7 @@
 				<div class="right"> 
                     <div class="menu">
                        <ul>
-                           <li><a href="index.html">Home</a></li>
+                           <li><a href="/GloryMenga/index.html">Home</a></li>
                            <li><a href="#">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
