--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Inschrijvingen | Sint-Jan Berchmanscollege</title>
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="style_berkay.css" />
+		<link rel="stylesheet" href="/BerkayUnutkan/style_berkay.css" />
         <link rel="stylesheet" href="/NelleFavoreel/menu.css">
 	</head>
 	<body>
