--- a/BerkayUnutkan/vacaturesberkay.html
+++ b/BerkayUnutkan/vacaturesberkay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_berkay3.css">
+    <link rel="stylesheet" href="/BerkayUnutkan/style_berkay3.css">
     <link rel="shortcut icon" href="/images/logo_navy_blue.png">
     <link rel="stylesheet" href="/NelleFavoreel/menu.css">
     <script src="/Search.js"></script>
