--- a/NelleFavoreel/schoolvisie.html
+++ b/NelleFavoreel/schoolvisie.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Schoolvisie</title>
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="style_Nelle5.css" />
+		<link rel="stylesheet" href="/NelleFavoreel/style_Nelle5.css" />
 		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
 	</head>
 	<body>
