--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/NassimEjja/Style.css" />
-		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
+		<link rel="stylesheet" href="NassimEjja/Style.css" />
+		<link rel="stylesheet" href="NelleFavoreel/menu.css" />
 		<title>Historiek</title>
 	</head>
 	<body>
@@ -14,7 +14,7 @@
 			<div class="nav">
 				<div class="image">
 					<a href="#"
-						><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"
+						><img src="images/logo_navy_blue.png" alt="logo_navy_blue"
 					/></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
@@ -23,62 +23,62 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="/GloryMenga/home.html">Home</a></li>
+							<li><a href="GloryMenga/index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
 									<li>
-										<a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a>
+										<a href="GloryMenga/Opvoedings.html">Opvoedingsproject</a>
 									</li>
 									<li>
-										<a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a>
+										<a href="NelleFavoreel/schoolvisie.html">Schoolvisie</a>
 									</li>
-									<li><a href="/NassimEjja/History.html">Historiek</a></li>
+									<li><a href="NassimEjja/History.html">Historiek</a></li>
 									<li>
-										<a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a>
+										<a href="NelleFavoreel/janBerchmans.html">Jan Berchmans</a>
 									</li>
-									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
-									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+									<li><a href="NelleFavoreel/motto.html">Motto</a></li>
+									<li><a href="NelleFavoreel/jaarthema.html">Jaarthema</a></li>
 								</ul>
 							</li>
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
 									<li>
-										<a href="/BerkayUnutkan/inschrijvingen.html"
+										<a href="BerkayUnutkan/inschrijvingen.html"
 											>Inschrijvingen</a
 										>
 									</li>
 									<li>
-										<a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"
+										<a href="Schoolkosten detailprijs 2022-2023 SEC.pdf"
 											>Schoolkosten</a
 										>
 									</li>
 									<li>
 										<a
-											href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html"
+											href="NordineElOuafrasi/Studierichtingen/studieaanbod.html"
 											>Studierichtingen</a
 										>
 									</li>
-									<li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
+									<li><a href="Privacyverklaring.pdf">Privacybeleid</a></li>
 									<li>
-										<a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a>
+										<a href="BerkayUnutkan/wieiswie.html">Wie is wie?</a>
 									</li>
 									<li>
-										<a href="/schoolreglement2022-2023_def.pdf"
+										<a href="schoolreglement2022-2023_def.pdf"
 											>Schoolreglement</a
 										>
 									</li>
 									<li>
-										<a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a>
+										<a href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a>
 									</li>
 								</ul>
 							</li>
-							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+							<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 							<div class="svg">
 								<a href="https://sint-jan-brussel.smartschool.be/login"
 									><img
-										src="/images/smartschool_app_icon.svg"
+										src="images/smartschool_app_icon.svg"
 										alt="smartschool"
 								/></a>
 							</div>
@@ -97,7 +97,7 @@
 		<div class="navErik">
 			<div class="image">
 				<a href="#"
-					><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"
+					><img src="images/logo_navy_blue.png" alt="logo_navy_blue"
 				/></a>
 				<div class="txtI">
 					<p>Sint-Jan Berchmanscollege</p>
@@ -129,76 +129,76 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="/GloryMenga/home.html">Home</a></li>
+						<li><a href="GloryMenga/index.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li>
-							<a class="smally" href="/GloryMenga/Opvoedings.html"
+							<a class="smally" href="GloryMenga/Opvoedings.html"
 								>Opvoedingsproject</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/NelleFavoreel/schoolvisie.html"
+							<a class="smally" href="NelleFavoreel/schoolvisie.html"
 								>Schoolvisie</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/NassimEjja/History.html">Historiek</a>
+							<a class="smally" href="NassimEjja/History.html">Historiek</a>
 						</li>
 						<li>
-							<a class="smally" href="/NelleFavoreel/janBerchmans.html"
+							<a class="smally" href="NelleFavoreel/janBerchmans.html"
 								>Jan Berchmans</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/NelleFavoreel/motto.html">Motto</a>
+							<a class="smally" href="NelleFavoreel/motto.html">Motto</a>
 						</li>
 						<li>
-							<a class="smally" href="/NelleFavoreel/jaarthema.html"
+							<a class="smally" href="NelleFavoreel/jaarthema.html"
 								>Jaarthema</a
 							>
 						</li>
 						<li><a>Organisatie</a></li>
 						<li>
-							<a class="smally" href="/BerkayUnutkan/inschrijvingen.html"
+							<a class="smally" href="BerkayUnutkan/inschrijvingen.html"
 								>Inschrijvingen</a
 							>
 						</li>
 						<li>
 							<a
 								class="smally"
-								href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"
+								href="Schoolkosten detailprijs 2022-2023 SEC.pdf"
 								>Schoolkosten</a
 							>
 						</li>
 						<li>
 							<a
 								class="smally"
-								href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html"
+								href="NordineElOuafrasi/Studierichtingen/studierichtingen.html"
 								>Studierichtingen</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/Privacyverklaring.pdf">Privacybeleid</a>
+							<a class="smally" href="Privacyverklaring.pdf">Privacybeleid</a>
 						</li>
 						<li>
-							<a class="smally" href="/BerkayUnutkan/wieiswie.html"
+							<a class="smally" href="BerkayUnutkan/wieiswie.html"
 								>Wie is wie?</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/schoolreglement2022-2023_def.pdf"
+							<a class="smally" href="schoolreglement2022-2023_def.pdf"
 								>Schoolreglement</a
 							>
 						</li>
 						<li>
-							<a class="smally" href="/BerkayUnutkan/vacaturesberkay.html"
+							<a class="smally" href="BerkayUnutkan/vacaturesberkay.html"
 								>Vacatures</a
 							>
 						</li>
-						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+						<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
 							<a href="https://sint-jan-brussel.smartschool.be/login"
-								><img src="/images/smartschool_app_icon.svg" alt="smartschool"
+								><img src="images/smartschool_app_icon.svg" alt="smartschool"
 							/></a>
 						</div>
 					</ul>
@@ -499,19 +499,19 @@
 					<h1>Sint-Jan Berchmanscollege</h1>
 					<div class="icons">
 						<div class="icon">
-							<img src="/images/call.png" alt="call" />
+							<img src="images/call.png" alt="call" />
 						</div>
 						<p>02/5120370</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
-							<img src="/images/location.png" alt="call" />
+							<img src="images/location.png" alt="call" />
 						</div>
 						<p>Ursulinenstraat 4 1000 Bruxelles</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
-							<img src="/images/mail.png" alt="call" />
+							<img src="images/mail.png" alt="call" />
 						</div>
 						<p>secretariaat@sint-jan-brussel.be</p>
 					</div>
@@ -522,24 +522,24 @@
 				<div class="txtB">
 					<div class="txtBlue">
 						<h1>Belangrijke info</h1>
-						<a href="/Privacyverklaring.pdf" target="_blank"
+						<a href="Privacyverklaring.pdf" target="_blank"
 							><p>Privacybeleid</p></a
 						>
-						<a href="/schoolreglement2022-2023_def.pdf" target="_blank"
+						<a href="schoolreglement2022-2023_def.pdf" target="_blank"
 							><p>Schoolregelment</p></a
 						>
 						<a
-							href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"
+							href="Schoolkosten detailprijs 2022-2023 SEC.pdf"
 							target="_blank"
 							><p>Schoolkosten</p></a
 						>
 					</div>
 					<div class="txtBlue">
 						<h1>Onze school</h1>
-						<a href="/BerkayUnutkan/inschrijvingen.html"
+						<a href="BerkayUnutkan/inschrijvingen.html"
 							><p>inschrijvingen</p></a
 						>
-						<a href="/BerkayUnutkan/vacaturesberkay.html"
+						<a href="BerkayUnutkan/vacaturesberkay.html"
 							><p>Alle Vacatures</p></a
 						>
 					</div>
