--- a/NelleFavoreel/motto.html
+++ b/NelleFavoreel/motto.html
@@ -22,7 +22,7 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="/GloryMenga/home.html">Home</a></li>
+							<li><a href="/GloryMenga/index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
