--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<div class="right"> 
                     <div class="menu">
                        <ul>
-                           <li><a href="GloryMenga/index.html">Home</a></li>
+                           <li><a href="index.html">Home</a></li>
                            <li><a href="#">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
