--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -23,7 +23,7 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="GloryMenga/index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
@@ -129,7 +129,7 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="GloryMenga/index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li>
 							<a class="smally" href="GloryMenga/Opvoedings.html"
