--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -22,7 +22,7 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="/GloryMenga/index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
@@ -96,7 +96,7 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="/GloryMenga/index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
