--- a/NelleFavoreel/janBerchmans.html
+++ b/NelleFavoreel/janBerchmans.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Jan Berchmans</title>
-		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="/NelleFavoreel/style_Nelle4.css" />
-		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
+		<link rel="shortcut icon" href="images/logo_navy_blue.png" />
+		<link rel="stylesheet" href="NelleFavoreel/style_Nelle4.css" />
+		<link rel="stylesheet" href="NelleFavoreel/menu.css" />
 	</head>
 	<body>
 		<!--Nav-->
@@ -22,7 +22,7 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="GloryMenga/home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
@@ -48,7 +48,7 @@
 							</li>
 							<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 							<div class="svg">
-								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
 							</div>
 						</ul>
 					</div>
@@ -96,7 +96,7 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="/GloryMenga/home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li><a class="smally" href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 						<li><a class="smally" href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -114,7 +114,7 @@
 						<li><a class="smally" href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
 						<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
-							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
 						</div>
 					</ul>
 				</div>
@@ -148,7 +148,7 @@
 				</h3>
 			</div>
 			<div class="foto">
-				<img src="/images/jan berchman.png" />
+				<img src="images/jan berchman.png" />
 			</div>
 		</div>
 		<!--Footer-->
