--- a/NelleFavoreel/schoolvisie.html
+++ b/NelleFavoreel/schoolvisie.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Schoolvisie</title>
-		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="/NelleFavoreel/style_Nelle5.css" />
-		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
+		<link rel="shortcut icon" href="images/logo_navy_blue.png" />
+		<link rel="stylesheet" href="NelleFavoreel/style_Nelle5.css" />
+		<link rel="stylesheet" href="NelleFavoreel/menu.css" />
 	</head>
 	<body>
 		<!--Nav-->
@@ -22,7 +22,7 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="/GloryMenga/home.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
@@ -48,7 +48,7 @@
 							</li>
 							<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 							<div class="svg">
-								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
 							</div>
 						</ul>
 					</div>
@@ -96,7 +96,7 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="/GloryMenga/home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li><a class="smally" href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 						<li><a class="smally" href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -114,7 +114,7 @@
 						<li><a class="smally" href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
 						<li><a href="NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
-							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
 						</div>
 					</ul>
 				</div>
@@ -135,7 +135,7 @@
 				</p>
 			</div>
 			<div class="schoolvisieFoto">
-				<img src="/images/speelplaats.jpeg" />
+				<img src="images/speelplaats.jpeg" />
 			</div>
 			<div class="bekwaam">
 				<h1>Bekwaam</h1>
@@ -153,7 +153,7 @@
 				</p>
 			</div>
 			<div class="bekwaamFoto">
-				<img src="/images/honderddagen5-2018.jpeg" />
+				<img src="images/honderddagen5-2018.jpeg" />
 			</div>
 			<div class="bewust">
 				<h1>Bewust</h1>
@@ -174,7 +174,7 @@
 				</p>
 			</div>
 			<div class="bewustFoto">
-				<img src="/images/honderddagen7-2018.jpeg" />
+				<img src="images/honderddagen7-2018.jpeg" />
 			</div>
 			<div class="bewogen">
 				<h1>Bewogen</h1>
@@ -192,7 +192,7 @@
 				</p>
 			</div>
 			<div class="bewogenFoto">
-				<img src="/images/overzicht.JPG" />
+				<img src="images/overzicht.JPG" />
 			</div>
 			<div class="totSlot">
 				<h1>Tot Slot</h1>
