--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="BerkayUnutkan/style_berkay2.css">
-    <link rel="shortcut icon" href="images/logo_navy_blue.png">
-    <link rel="stylesheet" href="NelleFavoreel/menu.css">
+    <link rel="stylesheet" href="/BerkayUnutkan/style_berkay2.css">
+    <link rel="shortcut icon" href="/images/logo_navy_blue.png">
+    <link rel="stylesheet" href="/NelleFavoreel/menu.css">
     <script src="Search.js"></script>
     <title>Wie is wie? | Sint-Jan Berchmanscollege</title>
 </head>
@@ -16,7 +16,7 @@
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="#"><img src="images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
@@ -24,31 +24,31 @@
 				<div class="right"> 
                     <div class="menu">
                        <ul>
-                           <li><a href="index.html">Home</a></li>
+                           <li><a href="/index.html">Home</a></li>
                            <li><a href="#">Over ons</a>
                                <ul class="dropdown">
-                                   <li><a href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-                                   <li><a href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-                                   <li><a href="NassimEjja/History.html">Historiek</a></li>
-                                   <li><a href="NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-                                   <li><a href="NelleFavoreel/motto.html">Motto</a></li>
-                                   <li><a href="NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                                   <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                                   <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                                   <li><a href="/NassimEjja/History.html">Historiek</a></li>
+                                   <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                                   <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                                   <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
                                </ul>
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank">Schoolkosten</a></li>
-                                   <li><a href="NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
-                                   <li><a href="Privacyverklaring.pdf" target="_blank">Privacybeleid</a></li>
-                                   <li><a href="BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="schoolreglement2022-2023_def.pdf" target="_blank">Schoolreglement</a></li>
-                                   <li><a href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
+                                   <li><a href="/Privacyverklaring.pdf" target="_blank">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf" target="_blank">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
-                           <li><a href="NelleFavoreel/contact.html">Contact</a></li>
+                           <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
                            <div class="svg">
-                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool"></a>
+                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
                            </div>
                        </ul>
                    </div>
@@ -62,10 +62,10 @@
 			</div>
 		</div>
 		<!--Nav-->
-    <!--Hamburger-->
+		<!--Hamburger-->
 		<div class="navErik">
 			<div class="image">
-				<a href="#"><img src="images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 				<div class="txtI">
 					<p>Sint-Jan Berchmanscollege</p>
 				</div>
@@ -96,25 +96,25 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a>Over ons</a></li>
-						<li><a class="smally" href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-						<li><a class="smally" href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-						<li><a class="smally" href="NassimEjja/History.html">Historiek</a></li>
-						<li><a class="smally" href="NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-						<li><a class="smally" href="NelleFavoreel/motto.html">Motto</a></li>
-						<li><a class="smally" href="NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+						<li><a class="smally" href="/NassimEjja/History.html">Historiek</a></li>
+						<li><a class="smally" href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+						<li><a class="smally" href="/NelleFavoreel/motto.html">Motto</a></li>
+						<li><a class="smally" href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
 						<li><a>Organisatie</a></li>
-						<li><a class="smally" href="BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-						<li><a class="smally" href="Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
-						<li><a class="smally" href="NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
-						<li><a class="smally" href="Privacyverklaring.pdf">Privacybeleid</a></li>
-						<li><a class="smally" href="BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-						<li><a class="smally" href="schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
-						<li><a class="smally" href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
-						<li><a href="NelleFavoreel/contact.html">Contact</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+						<li><a class="smally" href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+						<li><a class="smally" href="/Privacyverklaring.pdf">Privacybeleid</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+						<li><a class="smally" href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
+						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
-							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
 						</div>
 					</ul>
 				</div>
@@ -439,48 +439,49 @@
             </div>
               </div>
     <!--Footer-->
-		<footer>
-			<div class="foot">
-				<div class="frame">
-					<h1>Sint-Jan Berchmanscollege</h1>
-					<div class="icons">
-						<div class="icon">
-							<img src="images/call.png" alt="call" />
-						</div>
-						<p>02/5120370</p>
-					</div>
-					<div class="icons">
-						<div class="icon">
-							<img src="images/location.png" alt="call" />
-						</div>
-						<p>Ursulinenstraat 4 1000 Bruxelles</p>
-					</div>
-					<div class="icons">
-						<div class="icon">
-							<img src="images/mail.png" alt="call" />
-						</div>
-						<p>secretariaat@sint-jan-brussel.be</p>
-					</div>
-				</div>
-				<div class="white"></div>
-			</div>
-			<div class="blue">
-				<div class="txtB">
-					<div class="txtBlue">
-						<h1>Belangrijke info</h1>
-						<a href="Privacyverklaring.pdf" target="_blank"><p>Privacybeleid</p></a>
-						<a href="schoolreglement2022-2023_def.pdf" target="_blank"><p>Schoolregelment</p></a>
-						<a href="Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank"><p>Schoolkosten</p></a>
-					</div>
-					<div class="txtBlue">
-						<h1>Onze school</h1>
-						<a href="BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
-						<a href="BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<!--Footer-->
+    <footer>
+      <div class="foot">
+          <div class="frame">
+              <h1>Sint-Jan Berchmanscollege</h1>
+              <div class="icons">
+                  <div class="icon">
+                      <img src="/images/call.png" alt="call">
+                  </div>
+                  <p>02/5120370</p>
+              </div>
+              <div class="icons">
+                  <div class="icon">
+                      <img src="/images/location.png" alt="call">
+                  </div>
+                  <p>Ursulinenstraat 4 1000 Bruxelles</p>
+              </div>
+              <div class="icons">
+                  <div class="icon">
+                      <img src="/images/mail.png" alt="call">
+                  </div>
+                  <p>secretariaat@sint-jan-brussel.be</p>
+              </div>
+          </div>
+          <div class="white">
+          </div>
+      </div>
+      <div class="blue">
+          <div class="txtB">
+              <div class="txtBlue">
+                  <h1>Belangrijke info</h1>
+                  <a href="Privacyverklaring.pdf" target="_blank"><p>Privacybeleid</p></a>
+                  <a href="schoolreglement2022-2023_def.pdf" target="_blank"><p>Schoolregelment</p></a>
+                  <a href="Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank"><p>Schoolkosten</p></a>
+              </div>
+              <div class="txtBlue">
+                  <h1>Onze school</h1>
+                  <a href="BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
+                  <a href="BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
+              </div>
+          </div>
+      </div>
+  </footer>
+  <!--Footer-->
     <script>
       function myFunction() {
           var x = document.getElementById("menu");
